ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::A"), WithComponent("ecsdb::B")]).simplify().sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::A\"), WithComponent(\"ecsdb::B\")]).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where (component in (:1, :2))",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::A",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::B",
            ),
        ),
    ],
}
