ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::Test\"), EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where ((select true from components c2 where c2.entity = components.entity and c2.component = :1) or entity = :2 or (select true from components c2 where c2.entity = components.entity and c2.component = :3) or entity = :4)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":2",
            Integer(
                42,
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":4",
            Integer(
                42,
            ),
        ),
    ],
}
