ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@WithComponent("ecsdb::Test").sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "WithComponent(\"ecsdb::Test\").sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
    ],
}
